styles.css
:root {
  --bg-color: #ffffff;
  --text-color: #1b1d2c;
  --border-color: rgb(105, 170, 255);
}

* {
  font-family: "Montserrat Alternates", sans-serif;
  font: medium;
  color: var(--text-color);
  box-sizing: border-box;
}

.body {
  background-color: var(--bg-color);
  transition: background-color 0.25s, color 0.25s;
}

#page {
  width: 100%;
}

#topbar {
  width: 100%;
  position: relative;
  padding: 10px 0;
  text-align: center;
}

#topbar .heading {
  margin: 0;
}

#DMtext {
  color: white;
  user-select: none;
}

input[type="checkbox"]+label {
  color: black;
}

body:has(#darkMode:checked) {
  --bg-color: #1b1d2c;
  --text-color: #ffffff;
  --border-color: rgb(3, 72, 99);
}

.switch {
  background-color: black;
  border-radius: 10px;
  padding: 10px;
  border-style: solid;
  border-width: 2px;
  border-color: white;
  position: absolute;
  right: 10px;
  top: 50%;
  transform: translateY(-50%);
  display: flex;
  align-items: center;
  gap: 8px;
  white-space: nowrap;
}

.p {
  text-indent: 40px;
  padding: 5px;
  margin: 5px;
  line-height: normal;
}

h3 {
  text-align: center;
}

.heading {
  text-align: center;
  font-family: "Montserrat Alternates", sans-serif;
}

img {
  width: 100%;
  float: right;
}


a:link {
  color: rgb(130, 173, 226);
}

a:visited {
  color: rgb(156, 130, 226);
}

a:hover {
  color: red;
}

a {
  text-decoration: underline;
}

@media (min-width: 1200px) {
  .main {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: stretch;
    flex-direction: row;
  }

  .box {
    display: flex;
    justify-content: top;
    align-items: center;
    flex-direction: column;
    width: calc(33.333% - 10px);
    padding: 10px;
    margin: 5px;
    border-style: solid;
    border-color: var(--border-color);
    border-width: 5px;
    border-radius: 20px;
  }
}

@media (min-width: 992px) and (max-width: 1199px) {
  .main {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: stretch;
    flex-direction: row;
  }

  .box {
    display: flex;
    justify-content: top;
    align-items: center;
    flex-direction: column;
    width: calc(33.333% - 10px);
    padding: 10px;
    margin: 5px;
    border-style: solid;
    border-color: var(--border-color);
    border-width: 5px;
    border-radius: 20px;
  }
}

@media (min-width: 768px) and (max-width: 991px) {
  .main {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: stretch;
    flex-direction: column;
  }

  .box {
    display: flex;
    justify-content: top;
    align-items: center;
    flex-direction: column;
    width: 100%;
    padding: 10px;
    margin: 5px;
    border-style: solid;
    border-color: var(--border-color);
    border-width: 5px;
    border-radius: 20px;
  }
}

@media (max-width: 767px) {
  .main {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: stretch;
    flex-direction: column;
  }

  .box {
    display: flex;
    justify-content: top;
    align-items: center;
    flex-direction: column;
    width: 100%;
    padding: 10px;
    margin: 5px;
    border-style: solid;
    border-color: var(--border-color);
    border-width: 5px;
    border-radius: 20px;
  }
}

